--- a/src/index.css
+++ b/src/index.css
@@ -86,6 +86,7 @@ video {
   font: inherit;
   vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article,
 aside,
@@ -100,17 +101,24 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
+  background-color: var(--black-color);
+  height: 100%;
+  background-image: url('./../public/images/background.png');
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -118,14 +126,39 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
 a {
   text-decoration: none;
+  color: inherit;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+:root {
+  --black-color: #1f1e1e;
+  --yellow-color: #FFC24B;
+  --light-yellow-color: #fbe098fc;
+  --cream-color: #FFF9C0;
+
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  width: 90%;
+  margin: 3rem auto;
+  margin-bottom: 0;
+}
+
+.active {
+  color: var(--cream-color)
 }
