add contact page styles and home page navigation

--- a/src/components/ProductCard/css/productCard.module.css
+++ b/src/components/ProductCard/css/productCard.module.css
@@ -36,6 +36,7 @@
   border-top-left-radius: 20px;
 }
 
-.cardWrapper > :nth-child(2) {
+.cardWrapper> :nth-child(2) {
   padding: 20px;
+  cursor: pointer;
 }
