--- a/src/pages/about/css/about.module.css
+++ b/src/pages/about/css/about.module.css
@@ -1,18 +1,25 @@
 .aboutWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   background-color: var(--black-color);
-  padding: 3rem;
+
 }
+
 .aboutWrapper h2 {
-  font-size: 24px;
+  font-size: 28px;
   font-weight: 600;
   color: var(--yellow-color);
   margin-bottom: 2rem;
 }
-.aboutWrapper > div:last-child {
+
+.aboutWrapper>div:last-child {
   display: flex;
   flex-direction: column;
 }
 
-.aboutWrapper > div:last-child div:not(:last-child) {
+.aboutWrapper>div:last-child div:not(:last-child) {
   margin-bottom: 2rem;
 }
