--- a/src/components/AboutPageDetails/css/aboutPageDetails.module.css
+++ b/src/components/AboutPageDetails/css/aboutPageDetails.module.css
@@ -1,9 +1,11 @@
 .aboutHeadingWrapper {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   margin-bottom: 1rem;
   cursor: pointer;
 }
+
 .aboutHeadingWrapper button {
   display: flex;
   align-items: center;
@@ -17,6 +19,7 @@
   height: 30px;
   border-radius: 50%;
 }
+
 .aboutPageDetailsWrapper p {
   display: flex;
   font-size: 20px;
@@ -25,8 +28,13 @@
   line-height: 1.5;
   margin-left: 2rem;
 }
+
 .aboutPageDetailsWrapper h3 {
   width: 30%;
   font-size: 22px;
   color: var(--light-yellow-color);
+}
+
+.AboutPageDetailsContainer {
+  width: 70%;
 }
