add innovations info and style

--- a/src/components/InnovationsDropDown/css/dropDown.module.css
+++ b/src/components/InnovationsDropDown/css/dropDown.module.css
@@ -1,12 +1,16 @@
 .dropDownWrapper {
 
   position: absolute;
-  padding-top: 10px;
-  width: 200px;
+  padding: 10px 20px;
+  width: 250px;
   background-color: var(--black-color);
 
 }
 
 .dropDownWrapper li {
   padding-bottom: 10px;
+}
+
+.dropDownWrapper li:not(:last-child) {
+  line-height: 1.6em;
 }
