--- a/src/components/ContactInfoDetails/css/contactInfoDetails.module.css
+++ b/src/components/ContactInfoDetails/css/contactInfoDetails.module.css
@@ -7,7 +7,7 @@
   color: var(--light-yellow-color);
   font-size: 22px;
   width: 200px;
-
+  line-height: 1.6;
 }
 
 .contactInfoDetailsWrapper:nth-child(2) {
