--- a/src/components/ProductCard/css/productCard.module.css
+++ b/src/components/ProductCard/css/productCard.module.css
@@ -1,7 +1,6 @@
 .cardWrapper {
   display: flex;
-  flex-direction: column;
-  width: 450px;
+  height: 390px;
   border-radius: 20px;
   border: 1px solid var(--cream-color);
   background-color: var(--black-color);
@@ -31,10 +30,14 @@
 }
 
 .cardWrapper>div img {
-  width: 100%;
-  border-top-right-radius: 20px;
+  width: 350px;
+  height: 100%;
   border-top-left-radius: 20px;
+  border-bottom-left-radius: 20px;
+
+
 }
+
 
 .cardWrapper> :nth-child(2) {
   padding: 20px;
