--- a/src/components/ProductCard/css/productCard.module.css
+++ b/src/components/ProductCard/css/productCard.module.css
@@ -1,9 +1,14 @@
 .cardWrapper {
-  display: flex;
-  height: 390px;
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-rows: auto auto;
+  max-width: 800px;
+  width: 100%;
+  height: 500px;
   border-radius: 20px;
   border: 1px solid var(--cream-color);
   background-color: var(--black-color);
+
 }
 
 .cardWrapper h3 {
@@ -16,30 +21,41 @@
 
 .cardWrapper h4 {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.5;
   color: var(--light-yellow-color);
   font-style: italic;
 }
 
-.cardWrapper p {
+.cardWrapper>p {
   line-height: 1.5;
   font-size: 18px;
   text-align: justify;
   color: var(--cream-color);
+  grid-column: 1 / span 2;
+  grid-row: 2/3;
+  padding: 25px 20px 0 20px;
 }
 
-.cardWrapper>div img {
-  width: 350px;
+.cardWrapper img {
+  width: 250px;
   height: 100%;
+  object-fit: cover;
   border-top-left-radius: 20px;
-  border-bottom-left-radius: 20px;
-
-
+  border-bottom-right-radius: 20px;
+  max-height: 290px;
+  height: 100%;
 }
 
 
 .cardWrapper> :nth-child(2) {
-  padding: 20px;
+  padding: 20px 0 0 20px;
   cursor: pointer;
+}
+
+@media screen and (max-width:2156px) {
+  .cardWrapper {
+    width: 660px;
+    height: 600px
+  }
 }
