--- a/src/components/ProductCard/css/productCard.module.css
+++ b/src/components/ProductCard/css/productCard.module.css
@@ -1,9 +1,7 @@
 .cardWrapper {
-  display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: auto auto;
-  max-width: 800px;
-  width: 100%;
+  display: flex;
+  width: 60rem;
+  max-width: 100%;
   height: 500px;
   border-radius: 20px;
   border: 1px solid var(--cream-color);
@@ -27,35 +25,41 @@
   font-style: italic;
 }
 
-.cardWrapper>p {
+.cardWrapper p {
   line-height: 1.5;
   font-size: 18px;
   text-align: justify;
   color: var(--cream-color);
-  grid-column: 1 / span 2;
-  grid-row: 2/3;
-  padding: 25px 20px 0 20px;
+  padding: 20px 0;
 }
 
 .cardWrapper img {
-  width: 250px;
-  height: 100%;
+  width: 30%;
   object-fit: cover;
   border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
-  max-height: 290px;
-  height: 100%;
+  border-bottom-left-radius: 20px;
 }
 
 
 .cardWrapper> :nth-child(2) {
-  padding: 20px 0 0 20px;
+  padding: 20px;
   cursor: pointer;
 }
 
-@media screen and (max-width:2156px) {
+@media screen and (max-width:2440px) {
   .cardWrapper {
-    width: 660px;
-    height: 600px
+    width: 100%;
+    height: 300px;
   }
+
+  .cardWrapper img {
+    width: 235px;
+  }
+}
+
+@media screen and (max-width:1750px) {
+  .cardWrapper {
+    height: 400px;
+  }
+
 }
