--- a/src/components/ProductCard/css/productCard.module.css
+++ b/src/components/ProductCard/css/productCard.module.css
@@ -6,7 +6,6 @@
   border-radius: 20px;
   border: 1px solid var(--cream-color);
   background-color: var(--black-color);
-
 }
 
 .cardWrapper h3 {
@@ -23,6 +22,7 @@
   line-height: 1.5;
   color: var(--light-yellow-color);
   font-style: italic;
+  text-align: justify;
 }
 
 .cardWrapper p {
@@ -40,13 +40,12 @@
   border-bottom-left-radius: 20px;
 }
 
-
-.cardWrapper> :nth-child(2) {
+.cardWrapper > :nth-child(2) {
   padding: 20px;
   cursor: pointer;
 }
 
-@media screen and (max-width:2440px) {
+@media screen and (max-width: 2440px) {
   .cardWrapper {
     width: 100%;
     height: 300px;
@@ -57,9 +56,86 @@
   }
 }
 
-@media screen and (max-width:1750px) {
+@media screen and (max-width: 1750px) {
   .cardWrapper {
     height: 400px;
   }
+}
+@media screen and (max-width: 1200px) {
+  .cardWrapper h3 {
+    font-size: 18px;
+  }
+  .cardWrapper h4,
+  .cardWrapper p {
+    line-height: 1.3;
+    font-size: 16.8px;
+  }
+  .cardWrapper p {
+    padding: 15px 0;
+  }
+}
 
+@media screen and (max-width: 930px) {
+  .cardWrapper {
+    flex-direction: column;
+    position: relative;
+  }
+  .cardWrapper img {
+    width: 150px;
+  }
+  .cardWrapper > div > div {
+    position: absolute;
+    top: 14px;
+    left: 164px;
+  }
+  .cardWrapper h4 {
+    margin-right: 10px;
+  }
+  .cardWrapper p {
+    padding: 0;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 711px) {
+  .cardWrapper {
+    height: max-content;
+  }
+  .cardWrapper h4 {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .cardWrapper h3 {
+    font-size: 15px;
+  }
+  .cardWrapper h4 {
+    font-size: 12px;
+  }
+  .cardWrapper > :nth-child(2) {
+    padding: 0px 20px 10px 20px;
+  }
+  .cardWrapper p {
+    font-size: 12px;
+    padding-top: 20px;
+  }
+}
+
+@media screen and (max-width: 430px) {
+  .cardWrapper {
+    gap: 20px;
+  }
+  .cardWrapper > div > div {
+    position: static;
+    text-align: center;
+  }
+  .cardWrapper img {
+    height: 150px;
+    border-radius: 50%;
+    margin: 10px auto;
+  }
+  .cardWrapper h3,
+  .cardWrapper h4 {
+    text-align: center;
+  }
 }
