--- a/src/components/ProductCard/css/productCard.module.css
+++ b/src/components/ProductCard/css/productCard.module.css
@@ -40,7 +40,7 @@
   border-bottom-left-radius: 20px;
 }
 
-.cardWrapper > :nth-child(2) {
+.cardWrapper> :nth-child(2) {
   padding: 20px;
   cursor: pointer;
 }
@@ -61,15 +61,18 @@
     height: 400px;
   }
 }
+
 @media screen and (max-width: 1200px) {
   .cardWrapper h3 {
     font-size: 18px;
   }
+
   .cardWrapper h4,
   .cardWrapper p {
     line-height: 1.3;
     font-size: 16.8px;
   }
+
   .cardWrapper p {
     padding: 15px 0;
   }
@@ -78,21 +81,29 @@
 @media screen and (max-width: 930px) {
   .cardWrapper {
     flex-direction: column;
-    position: relative;
+    align-items: center;
+    height: fit-content;
   }
+
+  .cardWrapper> :nth-child(2) {
+    padding-top: 0;
+  }
+
   .cardWrapper img {
-    width: 150px;
+    margin: 20px 0;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
   }
-  .cardWrapper > div > div {
-    position: absolute;
-    top: 14px;
-    left: 164px;
-  }
-  .cardWrapper h4 {
+
+  .cardWrapper h4,
+  .cardWrapper h3 {
     margin-right: 10px;
+    text-align: center;
   }
+
   .cardWrapper p {
-    padding: 0;
+    padding: 20px 0 0 0;
     font-size: 15px;
   }
 }
@@ -101,41 +112,34 @@
   .cardWrapper {
     height: max-content;
   }
+
   .cardWrapper h4 {
     font-size: 14px;
   }
-}
-@media screen and (max-width: 500px) {
-  .cardWrapper h3 {
-    font-size: 15px;
-  }
-  .cardWrapper h4 {
-    font-size: 12px;
-  }
-  .cardWrapper > :nth-child(2) {
-    padding: 0px 20px 10px 20px;
-  }
-  .cardWrapper p {
-    font-size: 12px;
-    padding-top: 20px;
+
+  .cardWrapper img {
+    width: 200px;
+    height: 200px;
+
   }
 }
 
-@media screen and (max-width: 430px) {
-  .cardWrapper {
-    gap: 20px;
-  }
-  .cardWrapper > div > div {
-    position: static;
-    text-align: center;
-  }
+@media screen and (max-width: 500px) {
   .cardWrapper img {
+    width: 150px;
     height: 150px;
-    border-radius: 50%;
-    margin: 10px auto;
   }
-  .cardWrapper h3,
+
+  .cardWrapper h3 {
+    font-size: 15px;
+  }
+
   .cardWrapper h4 {
-    text-align: center;
+    font-size: 12px;
+  }
+
+  .cardWrapper p {
+    font-size: 12px;
+    padding-top: 20px;
   }
 }
