--- a/src/pages/service/css/service.module.css
+++ b/src/pages/service/css/service.module.css
@@ -11,8 +11,9 @@
   margin-right: 5rem;
 }
 
-.serviceWrapper>div:last-child img {
+.serviceWrapper img {
   width: 350px;
+  height: 511px;
 }
 
 .serviceWrapper h2 {
@@ -33,4 +34,69 @@
   font-size: 20px;
   color: var(--light-yellow-color);
   margin-bottom: 2rem;
+}
+
+@media screen and (max-width:1300px) {
+  .serviceWrapper h2 {
+    font-size: 22px;
+  }
+
+  .serviceWrapper p:first-child {
+    font-size: 18px;
+  }
+
+  .serviceWrapper>div:first-child {
+
+    margin-right: 3rem;
+  }
+
+  .serviceWrapper img {
+    width: 250px;
+    height: 350px;
+  }
+
+}
+
+@media screen and (max-width:1000px) {
+
+  .serviceWrapper {
+    position: relative;
+  }
+
+  .serviceWrapper>div:first-child {
+    width: 100%;
+    margin-right: 0;
+  }
+
+  .serviceWrapper img {
+    position: absolute;
+    top: 50px;
+    width: 80px;
+    height: 100px;
+    right: 104px;
+  }
+}
+
+@media screen and (max-width:780px) {
+  .serviceWrapper img {
+    top: 4px;
+    left: 128px;
+    width: 60px;
+    height: 80px;
+
+  }
+
+  .serviceWrapper h2 {
+    font-size: 18px;
+  }
+
+  .serviceWrapper p {
+    font-size: 16px;
+  }
+
+  .serviceWrapper p:first-child {
+    font-size: 16px;
+    margin-bottom: 1rem;
+  }
+
 }
