--- a/src/components/Header/css/header.module.css
+++ b/src/components/Header/css/header.module.css
@@ -14,3 +14,21 @@
     padding: 1rem 2rem;
   }
 }
+
+@media screen and (max-width: 1200px) {
+  .headerWrapper {
+    padding: 10px 20px;
+  }
+}
+
+@media screen and (max-width: 930px) {
+  .headerWrapper {
+    padding: 0px 10px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .headerWrapper {
+    padding: 0 1.2rem;
+  }
+}
