--- a/src/components/LogoImage/css/LogoImage.module.css
+++ b/src/components/LogoImage/css/LogoImage.module.css
@@ -1,3 +1,15 @@
 .logoContainer img {
   width: 80px;
 }
+
+@media screen and (max-width: 930px) {
+  .logoContainer img {
+    width: 70px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .logoContainer img {
+    width: 50px;
+  }
+}
