--- a/src/components/ContactInfoDetails/css/contactInfoDetails.module.css
+++ b/src/components/ContactInfoDetails/css/contactInfoDetails.module.css
@@ -27,3 +27,28 @@
   color: var(--cream-color);
   margin-right: 10px;
 }
+@media screen and (max-width: 1250px) {
+  .contactInfoDetailsWrapper {
+    width: 400px;
+  }
+  .contactInfoDetailsWrapper h3 {
+    font-size: 18px;
+  }
+  .contactInfoDetailsWrapper p {
+    font-size: 18px;
+  }
+}
+@media screen and (max-width: 820px) {
+  .contactInfoDetailsWrapper:nth-child(2) {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+}
+@media screen and (max-width: 500px) {
+  .contactInfoDetailsWrapper h3 {
+    display: none;
+  }
+  .contactInfoDetailsWrapper {
+    width: 300px;
+  }
+}
