--- a/src/components/NavigationBar/css/navbar.module.css
+++ b/src/components/NavigationBar/css/navbar.module.css
@@ -3,7 +3,8 @@
   justify-content: space-between;
   align-items: center;
   gap: 3rem;
-
+  position: relative;
+  z-index: 100;
 }
 
 .navbarContainer li {
@@ -27,6 +28,7 @@
 
   .navbarContainer li {
     font-size: 18px;
+
   }
 }
 
@@ -45,5 +47,9 @@
     padding-top: 20px;
     flex-direction: column;
     align-items: flex-start;
+  }
+
+  .navbarContainer {
+    gap: 1.5rem;
   }
 }
