--- a/src/components/SearchBar/css/searchBar.module.css
+++ b/src/components/SearchBar/css/searchBar.module.css
@@ -1,3 +1,8 @@
+.inputWrapper {
+  width: 100%;
+  background-color: var(--black-color);
+}
+
 input {
   width: 50%;
   background-color: var(--black-color);
